--- a/ubah.css
+++ b/ubah.css
@@ -1,39 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-html
-{
-    scroll-behavior: smooth;
+
+html {
+    scroll-behavior: auto;
 }
-.navbar{
+
+.navbar {
     background: #131313;
-    padding: 10px 128px;
     z-index: 1000;
 }
+
 .navbar .navbar-brand {
     font-size: 30px;
     font-weight: 700;
-    font-family:'Potta One', cursive;
+    font-family: 'Potta One', cursive;
 }
-#navbarSupportedContent > ul > li:nth-child(n) > a {
+
+#navbarSupportedContent>ul>li:nth-child(n)>a {
     color: #fff;
     font-size: 18px;
     padding: 0px 14px;
 }
-#navbarSupportedContent > ul > li:nth-child(n) > a:hover,
-#navbarSupportedContent > ul > li:nth-child(n) > a.active{
+
+#navbarSupportedContent>ul>li:nth-child(n)>a:hover,
+#navbarSupportedContent>ul>li:nth-child(n)>a.active {
     color: #00BF85;
 }
-#navbarSupportedContent > button{
-    background-color:#00BF85;
+
+#navbarSupportedContent>button {
+    background-color: #00BF85;
+    color: #000;
     font-weight: 600;
-    border-radius: 30px;
+    border-radius: 40px;
+    margin: 6px;
+    font-size: 18px;
 }
-.mid{
+
+.mid {
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -43,7 +52,8 @@ html
     align-content: center;
     text-align: center;
 }
-.mid video{
+
+.mid video {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -53,66 +63,79 @@ html
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 .cuy {
     position: relative;
 }
-.mid .cuy h2{
+
+.mid .cuy h2 {
     font-size: 45px;
 }
-.mid .cuy p{
+
+.mid .cuy p {
     width: 55%;
     font-size: 15px;
     letter-spacing: 0.2px;
     padding-bottom: 16px;
 }
-.mid .cuy a{
-    background-color:#00BF85;
+
+.mid .cuy a {
+    background-color: #00BF85;
     padding: 9px 22px;
     font-weight: 600;
     border-radius: 30px;
     text-decoration: none;
 }
-.mid .cuy a:hover{
+
+.mid .cuy a:hover {
     background: #fff;
 }
-.about{
+
+.about {
     background-color: #000;
 }
-.about .text{
+
+.about .text {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items:flex-start;
+    align-items: flex-start;
     margin: auto;
 }
-.about .text h6{
-    color:#00BF85;
+
+.about .text h6 {
+    color: #00BF85;
     font-weight: 800;
     font-size: 16px;
     letter-spacing: 2px;
 }
-.about .text h2{
-    color:#F7F5F4;
+
+.about .text h2 {
+    color: #F7F5F4;
     font-weight: 700;
     font-size: 35px;
 }
-.about .text p{
-    color:#F7F5F4;
+
+.about .text p {
+    color: #F7F5F4;
     font-weight: 800;
     font-size: 18px;
-    letter-spacing:0.5px;
+    letter-spacing: 0.5px;
 }
-.about .text a{
-    background:#00BF85;
+
+.about .text a {
+    background: #00BF85;
     color: #111;
     padding: 9px 22px;
     font-weight: 600;
     border-radius: 30px;
     text-decoration: none;
 }
-.about .text a:hover{
+
+.about .text a:hover {
     background: #fff;
 }
+
 .about i {
     position: fixed;
     bottom: 40px;
@@ -127,51 +150,61 @@ html
     pointer-events: none;
     transition: opacity .3s ease-in-out;
 }
-.about i:hover{
+
+.about i:hover {
     background: #fff;
     transition: .5s;
 }
-.product{
+
+.product {
     background-color: #fff;
 }
-.product .text{
+
+.product .text {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items:flex-start;
+    align-items: flex-start;
     margin: auto;
 }
-.product .text h6{
-    color:#00BF85;
+
+.product .text h6 {
+    color: #00BF85;
     font-weight: 800;
     font-size: 16px;
     letter-spacing: 2px;
 }
-.product .text h2{
-    color:#111;
+
+.product .text h2 {
+    color: #111;
     font-weight: 700;
     font-size: 35px;
 }
-.product .text p{
+
+.product .text p {
     font-weight: 800;
     font-size: 18px;
-    letter-spacing:0.5px;
+    letter-spacing: 0.5px;
 }
-.product .text a{
-    background:#111;
+
+.product .text a {
+    background: #111;
     color: #fff;
     padding: 9px 22px;
     font-weight: 500;
     border-radius: 30px;
     text-decoration: none;
 }
-.product .text a:hover{
-    background: #00BF85 ;
+
+.product .text a:hover {
+    background: #00BF85;
 }
-.service{
+
+.service {
     background: #000;
 }
-.service .one{
+
+.service .one {
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -181,40 +214,47 @@ html
     padding: 32px 25px;
     border-radius: 7px;
 }
-.sign{
+
+.sign {
     background-color: #fff;
 }
-.sign .text{
+
+.sign .text {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items:flex-start;
+    align-items: flex-start;
     margin: auto;
 }
-.sign .text h6{
-    color:#00BF85;
+
+.sign .text h6 {
+    color: #00BF85;
     font-weight: 800;
     font-size: 16px;
     letter-spacing: 2px;
 }
-.sign .text h2{
-    color:#111;
+
+.sign .text h2 {
+    color: #111;
     font-weight: 900;
     font-size: 35px;
 }
-.sign .text p{
+
+.sign .text p {
     font-weight: 700;
     font-size: 18px;
-    letter-spacing:0.5px;
+    letter-spacing: 0.5px;
 }
-.sign .text a{
-    background-color:#111;
+
+.sign .text a {
+    background-color: #111;
     color: #fff;
     padding: 9px 22px;
     font-weight: 500;
     border-radius: 30px;
     text-decoration: none;
 }
-body > footer{
+
+body>footer {
     background: #111;
 }
